--- a/content/enterprise/releases/2022/v202203-1.mdx
+++ b/content/enterprise/releases/2022/v202203-1.mdx
@@ -14,7 +14,7 @@ The Terraform Enterprise April 2022 release will:
 
 ## APPLICATION LEVEL BREAKING CHANGES:
 
-1. The minimum required Replicated version is now 2.53.4. Airgap customers can download the latest version of Replicated from this [url](https://install.terraform.io/airgap/latest.tar.gz).
+1. The minimum required Replicated version is now 2.53.4. Airgap customers can visit this URL to download the latest Replicated version: [https://install.terraform.io/airgap/latest.tar.gz](https://install.terraform.io/airgap/latest.tar.gz).
 
 ## APPLICATION LEVEL FEATURES:
 
