--- a/content/cloud-docs/users-teams-organizations/single-sign-on/azure-ad.mdx
+++ b/content/cloud-docs/users-teams-organizations/single-sign-on/azure-ad.mdx
@@ -55,7 +55,7 @@ For more information on the listed features, visit the [Microsoft Azure AD SAML 
    1. In the **Reply URL** text box, paste the **Reply URL**.
    1. In the **Sign-on URL** text box, type the URL: `https://app.terraform.io/session`
    1. Select **Save**.
-1. On the **Single sign-on** page, download the `Certificate (Base64)` file from under SAML Signing Certificate
+1. On the **Single sign-on** page, download the `Certificate (Base64)` file from under **SAML Signing Certificate**.
 1. In the app's overview page, find the **Manage** section and select **Users and groups**.
 1. Select **Add user**, then select **Users and groups** in the **Add Assignment** dialog.
 1. In the **Users and groups** dialog, select your user from the Users list, then click the **Select** button at the bottom of the screen.
