--- a/content/cloud-docs/vcs/azure-devops-services.mdx
+++ b/content/cloud-docs/vcs/azure-devops-services.mdx
@@ -8,39 +8,38 @@ page_title: >-
 
 These instructions are for using dev.azure.com for Terraform Cloud's VCS features. [Other supported VCS providers](/cloud-docs/vcs) have separate instructions.
 
-Configuring a new VCS provider requires permission to manage VCS settings for the organization. ([More about permissions.](/cloud-docs/users-teams-organizations/permissions))
+This page explains the four main steps required to connect Terraform Cloud to your Azure DevOps Services VCS:
+
+1. Create a new connection in Terraform Cloud and get the callback URL.
+1. On your VCS, register your Terraform Cloud organization as a new application. Provide the callback URL and get the application ID and key.
+1. Provide Terraform Cloud with the application ID and key. Then, request VCS access.
+1. On your VCS, approve the access request from Terraform Cloud.
+
+~> **Important:** Terraform Cloud only supports Azure DevOps connections that use the `dev.azure.com` domain. If your Azure DevOps project uses the older `visualstudio.com` domain, you must migrate using the [steps in the Microsoft documentation](https://docs.microsoft.com/en-us/azure/devops/release-notes/2018/sep-10-azure-devops-launch#switch-existing-organizations-to-use-the-new-domain-name-url).
+
+## Requirements
+
+Configuring a new VCS provider requires permission to [manage VCS settings](/cloud-docs/users-teams-organizations/permissions#manage-vcs-settings) for the organization.
 
 [permissions-citation]: #intentionally-unused---keep-for-maintainers
 
-Connecting Terraform Cloud to your Azure DevOps Services VCS involves four steps:
+Before you begin, enable `Third-party application access via OAuth` in Azure DevOps Services settings.
 
-| On your VCS                                                                                       | On Terraform Cloud                                            |
-| ------------------------------------------------------------------------------------------------- | ------------------------------------------------------------- |
-|                                                                                                   | Create a new connection in Terraform Cloud. Get callback URL. |
-| Register your Terraform Cloud organization as a new app. Get ID and key and provide callback URL. |                                                               |
-|                                                                                                   | Provide Terraform Cloud with ID and key. Request VCS access.  |
-| Approve access request.                                                                           |                                                               |
+1. Log in to [Azure DevOps Services](https://dev.azure.com/).
+1. Click **Organization settings** in the bottom of the sidebar.
+1. Click **Policies** in the sidebar under **Security**.
+1. Enable the **Third-party application access via OAuth** setting.
 
-The rest of the page explains these steps in more detail.
-
-~> **Important:** Terraform Cloud only supports Azure DevOps connections which use the `dev.azure.com` domain. If your Azure DevOps project uses the older `visualstudio.com` domain, you will need to migrate using the [steps provided by Microsoft](https://docs.microsoft.com/en-us/azure/devops/release-notes/2018/sep-10-azure-devops-launch#switch-existing-organizations-to-use-the-new-domain-name-url).
+   ![Azure DevOps Services Screenshot: Polcies Third-party application access via Oauth](/img/docs/azure-devops-services-oauth-policies.png)
 
 ## Step 1: On Terraform Cloud, Begin Adding a New VCS Provider
 
-1. Open Terraform Cloud in your browser and navigate to the "VCS Providers" settings for your organization. Click the "Add VCS Provider" button.
+1. Log in to Terraform Cloud and navigate to the organization where you want to add a VCS connection.
+1. Click **Settings** in the menu bar and then click **Providers** under **Version control** in the sidebar.
+1. Click **Add VCS a Provider**. The Add a VCS Provider page appears.
+1. Open the **Azure DevOps** menu and then select **Azure DevOps Services**. The **Set up provider** page appears.
 
-   If you just created your organization, you might already be on this page. Otherwise:
-
-   1. Make sure the upper-left organization menu currently shows your organization.
-   1. Click the "Settings" link at the top of the page (or within the ☰ menu)
-   1. On the next page, click "VCS Providers" in the left sidebar
-   1. Click the "Add a VCS Provider" button
-
-1. The "Add VCS Provider" page is divided into multiple steps to guide you through adding a new VCS provider.
-
-   For the first step, select "Azure DevOps" then select "Azure DevOps Services" from the dropdown. The page will move to the next step.
-
-Leave the page open in a browser tab. In the next step you will copy values from this page, and in later steps you will continue configuring Terraform Cloud.
+Leave this page open in a browser tab. You will copy values from this page into Azure DevOps in the next step, and in later steps you will continue configuring Terraform Cloud.
 
 ## Step 2: From your Azure DevOps Services Profile, Create a New Application
 
@@ -50,12 +49,11 @@ Leave the page open in a browser tab. In the next step you will copy values from
 
 1. Go into your preferred organization.
 
-1. Click your user icon in the top right, and then click ". . ." > "User settings".
-   ![Azure DevOps Services Screenshot: Opening User settings Menu](/img/docs/azure-devops-services-user-settings.png)
+1. Click your user icon in the top right, and then click the **ellipses (...) ** and select **User settings**.
 
-1. From the User settings menu, click "Profile". Your profile page appears.
+1. From the User settings menu, click **Profile**. Your profile page appears.
 
-1. In the left sidebar, click "Authorizations". The Authorized OAuth Apps page appears.
+1. In the left sidebar, click **Authorizations**. The Authorized OAuth Apps page appears.
 
 1. Click the link to register a new app. A form appears asking for your company and application information.
 
@@ -70,15 +68,15 @@ Leave the page open in a browser tab. In the next step you will copy values from
 
    ![Azure DevOps Services Screenshot: Creating a new application in your Azure DevOps Services Profile](/img/docs/azure-devops-services-create-application.png)
 
-   In the "Authorized scopes" section, select only "Code (read)" and "Code (status)" and then click "Create Application."
+   In the **Authorized scopes** section, select only **Code (read)** and **Code (status)** and then click **Create Application.**
 
    ![Azure DevOps Services Screenshot: Required permissions when creating a new application in your Azure DevOps Services Profile](/img/docs/azure-devops-services-application-permissions.png)
 
-   ~> **Important:** Do not add any additional scopes beyond "Code (read)" and "Code (status)," as this can prevent Terraform Cloud from connecting. Note that these authorized scopes cannot be updated after the application is created; to fix incorrect scopes you must delete and re-create the application.
+   ~> **Important:** Do not add any additional scopes beyond **Code (read)** and **Code (status),** as this can prevent Terraform Cloud from connecting. Note that these authorized scopes cannot be updated after the application is created; to fix incorrect scopes you must delete and re-create the application.
 
 1. After creating the application, the next page displays its details. Leave this page open in a browser tab. In the next step, you will copy and paste the unique **App ID** and **Client Secret** from this page.
 
-   If you accidentally close this details page and need to find it later, you can reach it from the "Applications and Services" links at the bottom left of your profile.
+   If you accidentally close this details page and need to find it later, you can reach it from the **Applications and Services** links at the bottom left of your profile.
 
 ## Step 3: On Terraform Cloud, Set up Your Provider
 
@@ -88,7 +86,7 @@ Leave the page open in a browser tab. In the next step you will copy values from
 
    ![Terraform Cloud screenshot: the ssh key screen](/img/docs/azure-devops-services-tfe-secret.png)
 
-1. Click "Connect and continue." This takes you to a page on Azure DevOps Services, asking whether you want to authorize the app. Click the "Accept" button and you'll be redirected back to Terraform Cloud.
+1. Click **Connect and continue.** This takes you to a page on Azure DevOps Services, asking whether you want to authorize the app. Click the **Accept** button and you'll be redirected back to Terraform Cloud.
 
    ![Azure DevOps Services Screenshot: Accepting the terms of use for connecting Terraform Cloud and Azure DevOps Services](/img/docs/azure-devops-services-accept-terms.png)
 
@@ -107,7 +105,7 @@ Most organizations will not need to add an SSH private key. However, if the orga
 
 ### If You Don't Need an SSH Keypair:
 
-1. Click the "Skip and Finish" button. This returns you to Terraform Cloud's VCS Providers page, which now includes your new Azure DevOps Services client.
+1. Click the **Skip and Finish** button. This returns you to Terraform Cloud's VCS Providers page, which now includes your new Azure DevOps Services client.
 
 ### If You Do Need an SSH Keypair:
 
@@ -117,7 +115,7 @@ Most organizations will not need to add an SSH private key. However, if the orga
 
 1. While logged into the Azure DevOps Services account you want Terraform Cloud to act as, navigate to the SSH Keys settings page, add a new SSH key and paste the value of the SSH public key you just created.
 
-1. In Terraform Cloud's "Add VCS Provider" page, paste the text of the **SSH private key** you just created, and click the "Add SSH Key" button.
+1. In Terraform Cloud's **Add VCS Provider** page, paste the text of the **SSH private key** you just created, and click the **Add SSH Key** button.
 
    ![Terraform Cloud screenshot: the ssh key screen](/img/docs/azure-devops-services-ssh-key.png)
 
