--- a/content/cloud-docs/users-teams-organizations/single-sign-on/azure-ad.mdx
+++ b/content/cloud-docs/users-teams-organizations/single-sign-on/azure-ad.mdx
@@ -63,10 +63,11 @@ For more information on the listed features, visit the [Microsoft Azure AD SAML 
 1. In the **Add Assignment** dialog, click the **Assign** button.
 
 ## Configuration (Terraform Cloud)
-1. Edit settings of your Azure SSO configuration
-   1. Go to **Public Certificate** 
-   1. Paste the contents of the SAML Signing Certificate downloaded from Microsoft Azure AD
-   1. Save Settings  
+To edit your Azure SSO configuration settings:
+
+   1. Go to **Public Certificate**. 
+   1. Paste the contents of the SAML Signing Certificate you downloaded from Microsoft Azure AD.
+   1. Save Settings.  
 1. [Verify](/cloud-docs/users-teams-organizations/single-sign-on/testing) your settings and click "Enable".
 
 1. Your Azure SSO configuration is complete and ready to [use](/cloud-docs/users-teams-organizations/single-sign-on#signing-in-with-sso).
