--- a/content/enterprise/releases/2022/v202203-1.mdx
+++ b/content/enterprise/releases/2022/v202203-1.mdx
@@ -20,9 +20,9 @@ The minimum required Replicated version is now 2.53.4. Airgap customers can visi
 
 1. Added the ability to [archive configuration versions](https://www.terraform.io/cloud-docs/workspaces/configurations#archiving-configuration-versions) either automatically or manually in order to free up storage space and limit the amount of sensitive data stored in Terraform Enterprise.
 1. Improved the performance and reliability when destroying large workspaces.
-1. Added support for private providers in the private registry.
-1. Added API endpoints for [downloading configuration versions](https://www.terraform.io/cloud-docs/api-docs/configuration-versions#download-configuration-files).
-1. Added [Variable Sets](https://www.terraform.io/cloud-docs/api-docs/variable-sets).
+1. Added support to [publish private providers](/cloud-docs/registry/publish-providers) in the Terraform Cloud private registry. Once you have published a private provider through the API, members of your organization can search for it in the private registry UI and use it in configurations.
+1. Added API endpoints to the Terraform Cloud API for [downloading configuration versions](https://www.terraform.io/cloud-docs/api-docs/configuration-versions#download-configuration-files). A configuration version is a resource used to reference the uploaded configuration files that are associated with the Terraform runs.
+1. Added [Variable Sets](https://www.terraform.io/cloud-docs/api-docs/variable-sets) which let you reuse the same variables across multiple workspaces. For example, you could define a variable set of provider credentials and automatically apply it to all of the workspaces using that provider. .
 1. Added html and/or plain-text email format support to all account-related emails that are sent to users on behalf of TFE.
 
 ## APPLICATION LEVEL BUG FIXES:
