docs: experiment with auto-approving percy

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -8,7 +8,7 @@ show_notification: false
 
 # Terraform Documentation
 
-Terraform is an infrastructure as code (IaC) tool that allows you to build, change, and version infrastructure safely and efficiently. This includes both low-level components like compute instances, storage, and networking, as well as high-level components like DNS entries and SaaS features.
+Terraform is an infrastructure as code tool that allows you to build, change, and version infrastructure safely and efficiently. This includes both low-level components like compute instances, storage, and networking, as well as high-level components like DNS entries and SaaS features.
 
 <div className="container-fluid"><div className="row">
 <div className="col-md-6 col-sm-12">
