update private registry provider publishing docs (#2204)
* add a step to create provider

* Update content/cloud-docs/registry/publish-providers.mdx

Co-authored-by: Laura Pacilio <83350965+laurapacilio@users.noreply.github.com>

Co-authored-by: Laura Pacilio <83350965+laurapacilio@users.noreply.github.com>

--- a/content/cloud-docs/registry/publish-providers.mdx
+++ b/content/cloud-docs/registry/publish-providers.mdx
@@ -40,6 +40,8 @@ To publish a new provider through the Terraform Cloud API:
     ```json
     "key-id": "32966F3FB5AC1129"
     ```
+1. Use the [Create a Provider endpoint](/cloud-docs/api-docs/private-registry/providers#create-a-provider) to create the provider in Terraform Cloud. 
+
 1. Use the [Create a Provider Version endpoint](/cloud-docs/api-docs/private-registry/provider-versions-platforms#create-a-provider-version) to create a version with the `key-id` from the previous step. The response includes URL links that you will use to upload the `SHA256SUMS` and `SHA256.sig` files.
 
     ```json
