Apply suggestions from code review
Co-authored-by: Kevin Wang <kwangsan@gmail.com>
Co-authored-by: Laura Pacilio <83350965+laurapacilio@users.noreply.github.com>

--- a/content/plugin/framework/index.mdx
+++ b/content/plugin/framework/index.mdx
@@ -7,7 +7,7 @@ description: |-
 
 # Terraform Plugin Framework
 
-The plugin framework is a new way to develop Terraform Plugins on [Protocol Version 6](../how-terraform-works#terraform-plugin-protocol). It offers improvements and new features from [Teraform Plugin SDKv2](/plugin/sdkv2/sdkv2-intro).
+The plugin framework is a new way to develop Terraform Plugins on [Protocol Version 6](/plugin/how-terraform-works#terraform-plugin-protocol). It offers improvements and new features from [Teraform Plugin SDKv2](/plugin/sdkv2/sdkv2-intro).
 
 ~> **Important**: [Which SDK Should I Use?](/plugin/which-sdk) explains the differences between [Teraform Plugin SDKv2](/plugin/sdkv2/sdkv2-intro) and Terraform Plugin Framework to help you decide which option is right for your provider.
 
@@ -31,4 +31,4 @@ The plugin framework is a new way to develop Terraform Plugins on [Protocol Vers
 ## Combine or Translate
 
 * [Combine your provider](../mux/combine-protocol-version-6-providers) with other [protocol version 6](../how-terraform-works#protocol-version-6) providers.
-* [Translate your provider](../mux/translate-protovol-version-6-to-5) into a [protocol version 5](../how-terraform-works#protocol-version-5) provider for compatibility with Terraform 0.12 and later. [Protocol version 6](../how-terraform-works#protocol-version-6) features cannot be used.
+* [Translate your provider](../mux/translate-protocol-version-6-to-5) into a [protocol version 5](../how-terraform-works#protocol-version-5) provider for compatibility with Terraform 0.12 and later. [Protocol version 6](../how-terraform-works#protocol-version-6) features cannot be used.
